# satcomm

./: .gitignore  Makefile  README.md  build_all_apps.sh  build_sim.sh
apps/: CMakeLists.txt
apps/common/: ConfigParser.cpp
apps/common/Audio/: AudioHelper.cpp  AudioHelper.hpp  AudioSession.cpp  VoiceSession.cpp  VoiceSession.hpp
apps/common/common_config/: Datafilter.conf
apps/common/console_app_framework/: CMakeLists.txt  ConsoleApp.cpp
apps/common/utils/: SignalHandler.cpp  SignalHandler.hpp  Utils.cpp  Utils.hpp
apps/reference/: CMakeLists.txt
apps/reference/chrony-sock/: CMakeLists.txt  chrony-sock.cpp  chrony-sock.service
apps/reference/ecall_app/: AudioClient.cpp  AudioClient.hpp  CMakeLists.txt  ECallApp.cpp  ECallApp.hpp  ECallManager.cpp  ECallManager.hpp  EcallOverIms.cpp  EcallOverIms.hpp  EcallScanFailHandler.cpp  LocationClient.cpp  MsdProvider.cpp  MsdProvider.hpp  TelClient.cpp  TelClient.hpp  TelClientUtils.cpp  TelClientUtils.hpp  ThermClient.cpp
apps/reference/loc_tracker_app/: CMakeLists.txt  LocationTrackerApp.cpp
apps/reference/power_ref_app/: CMakeLists.txt  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  IEventListener.hpp  PowerRefDaemon.cpp  PowerRefDaemon.hpp
apps/reference/remote_sim/: CMakeLists.txt  CardControl.cpp  CardControl.hpp  RemoteSimDaemon.cpp
apps/reference/rits/: CMakeLists.txt  ObeConfig.conf  README.md
apps/samples/: CMakeLists.txt
apps/samples/audio/: CMakeLists.txt
apps/samples/card_services/: CMakeLists.txt
apps/samples/config/: CMakeLists.txt
apps/samples/cv2x/: CMakeLists.txt
apps/samples/data/: CMakeLists.txt
apps/samples/diag/: CMakeLists.txt
apps/samples/loc/: CMakeLists.txt
apps/samples/phone/: CMakeLists.txt
apps/samples/platform/: CMakeLists.txt
apps/samples/power/: CMakeLists.txt
apps/samples/rsp/: CMakeLists.txt
apps/samples/satcom/: CMakeLists.txt
apps/samples/security/: CMakeLists.txt
apps/samples/sensor/: CMakeLists.txt
apps/samples/serving_system/: CMakeLists.txt
apps/samples/sms/: CMakeLists.txt
apps/samples/subscription/: CMakeLists.txt
apps/samples/thermal/: CMakeLists.txt
apps/samples/wlan/: CMakeLists.txt
apps/tests/: CMakeLists.txt
apps/tests/antenna_test_app/: AntennaTestApp.cpp  AntennaTestApp.hpp  CMakeLists.txt  MyAntennaListener.cpp  MyAntennaListener.hpp
apps/tests/audio_console_app/: AudioClient.cpp  AudioClient.hpp  AudioConsoleApp.cpp  AudioConsoleApp.hpp  CMakeLists.txt  CaptureMenu.cpp  CaptureMenu.hpp  HpcmMenu.cpp  HpcmMenu.hpp  LoopbackMenu.cpp  LoopbackMenu.hpp  PlayMenu.cpp  PlayMenu.hpp  RepeatedPlaybackMenu.cpp  RepeatedPlaybackMenu.hpp  ToneMenu.cpp  ToneMenu.hpp  TransCodeMenu.cpp  TransCodeMenu.hpp  VoiceMenu.cpp  VoiceMenu.hpp
apps/tests/audio_loopback_app/: AudioLoopbackApp.cpp  AudioLoopbackApp.hpp  CMakeLists.txt
apps/tests/cellular_connection_security_app/: CMakeLists.txt  CellularConnectionSecurityApp.cpp  CellularConnectionSecurityApp.hpp
apps/tests/crypto_accelerator_app/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp  CryptoAcceleratorApp.cpp  CryptoAcceleratorApp.hpp  CryptoOperationMenu.cpp  CryptoOperationMenu.hpp
apps/tests/crypto_console_app/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp  CryptoConsoleApp.cpp  CryptoConsoleApp.hpp
apps/tests/cv2x_config_app/: CMakeLists.txt  Cv2xConfigApp.cpp  Cv2xConfigApp.hpp  README.md
apps/tests/cv2x_get_capabilities_app/: CMakeLists.txt  Cv2xGetCapabilitiesApp.cpp
apps/tests/cv2x_inject_speed/: CMakeLists.txt  Cv2xInjectSpeed.cpp
apps/tests/cv2x_l2_id_filter_app/: CMakeLists.txt  Cv2xL2IdFilterApp.cpp
apps/tests/cv2x_mac_clone_attack_app/: CMakeLists.txt  Cv2xMacCloneAttackTest.cpp
apps/tests/cv2x_set_tx_power_app/: CMakeLists.txt  Cv2xSetTxPowerApp.cpp
apps/tests/cv2x_slss_rx_app/: CMakeLists.txt  Cv2xSlssRxTest.cpp
apps/tests/cv2x_slss_utc_app/: CMakeLists.txt  Cv2xSlssUtcTest.cpp
apps/tests/cv2x_tcp_test/: CMakeLists.txt  Cv2xTcpTest.cpp
apps/tests/cv2x_tx_report_test_app/: CMakeLists.txt  Cv2xTxReportTestApp.cpp  Cv2xTxReportTestApp.hpp  Report.cpp  Report.hpp
apps/tests/cv2x_unicast_app/: CMakeLists.txt  Cv2xUnicastApp.cpp
apps/tests/data_keep_alive_app/: CMakeLists.txt  KeepAliveTestApp.cpp  KeepAliveTestApp.hpp
apps/tests/data_qos_test_app/: CMakeLists.txt  DataQosTestApp.cpp  DataQosTestApp.hpp  DataUtils.cpp  DataUtils.hpp
apps/tests/diag_odl_app/: CMakeLists.txt  CallbackMethod.cpp  CallbackMethod.hpp  CollectionMethod.cpp  CollectionMethod.hpp  DiagODLApp.cpp  DiagODLApp.hpp  FileMethod.cpp  FileMethod.hpp  UserInput.cpp  UserInput.hpp
apps/tests/filesystem_test_app/: CMakeLists.txt  FileSystemCommandMgr.cpp  FileSystemCommandMgr.hpp  FileSystemListener.cpp  FileSystemListener.hpp  FileSystemTestApp.cpp  FileSystemTestApp.hpp
apps/tests/imei_test_app/: CMakeLists.txt  ImeiTestApp.cpp
apps/tests/location_test_app/: CMakeLists.txt  DgnssMenu.cpp  DgnssMenu.hpp  LocationMenu.cpp  LocationMenu.hpp  LocationUtils.cpp  LocationUtils.hpp  MyLocationCommandCallback.cpp  MyLocationCommandCallback.hpp  MyLocationListener.cpp  MyLocationListener.hpp
apps/tests/modem_configurator/: CMakeLists.txt  ModemConfigurator.cpp  (+1 more)
simulation/: CMakeLists.txt  FileInfo.hpp.in  Makefile  README.txt  build_sim.sh  json_update.sh  record_sensor.sh  setup_simulation.sh  system_details.sh  telsdk_start_system.sh
simulation/conf/: CMakeLists.txt  eCall.conf  supervisord.conf  tel.conf  telsdk_simulation_server.conf  updated_msdsettings.txt
simulation/json/: CMakeLists.txt  Events.json
simulation/libs/: CMakeLists.txt  VERSION  release-name-info.sh
simulation/protos/: CMakeLists.txt  audio_simulation.proto  common_simulation.proto  cv2x_simulation.proto  data_simulation.proto  event_simulation.proto  loc_simulation.proto  platform_simulation.proto  power_simulation.proto  satcom_simulation.proto  sensor_simulation.proto  tel_simulation.proto  therm_simulation.proto
simulation/scripts/: record_and_sort_sensor_data.sh  record_location.bat  record_location.sh  record_sensor_data.bat  sort_sensor_data.ps1
(+1543 files in other folders)
