cmake_minimum_required(VERSION 3.10.2)

# build only if we are not building in bitbake environment
if(BUILD_ALL_REFERENCE)
if (TELSDK_FEATURE_LOC AND TELSDK_FEATURE_TEL)
    add_subdirectory( loc_tracker_app )
endif (TELSDK_FEATURE_LOC AND TELSDK_FEATURE_TEL)
endif(BUILD_ALL_REFERENCE)

if(NOT TELSDK_FEATURE_FOR_SECONDARY_VM)
if(WITH_LOCATION AND TELSDK_FEATURE_LOC)
    add_subdirectory( chrony-sock)
endif(WITH_LOCATION AND TELSDK_FEATURE_LOC)
endif (NOT TELSDK_FEATURE_FOR_SECONDARY_VM)

if(MACHINE_HAS_CV2X_ONLY OR MACHINE_HAS_CV2X)
    add_subdirectory( rits )
endif(MACHINE_HAS_CV2X_ONLY OR MACHINE_HAS_CV2X)

if(TELSDK_FEATURE_TEL)
    add_subdirectory( remote_sim )
endif (TELSDK_FEATURE_TEL)

if(TELSDK_FEATURE_TEL AND TELSDK_FEATURE_AUDIO AND TELSDK_FEATURE_LOC AND TELSDK_FEATURE_THERM)
    add_subdirectory( ecall_app )
endif(TELSDK_FEATURE_TEL AND TELSDK_FEATURE_AUDIO AND TELSDK_FEATURE_LOC AND TELSDK_FEATURE_THERM)

if(NOT TELSDK_FEATURE_FOR_SECONDARY_VM)
if(TELSDK_FEATURE_POWER AND TELSDK_FEATURE_TEL AND TELSDK_FEATURE_DATA)
    add_subdirectory( power_ref_app )
endif(TELSDK_FEATURE_POWER AND TELSDK_FEATURE_TEL AND TELSDK_FEATURE_DATA)
endif(NOT TELSDK_FEATURE_FOR_SECONDARY_VM)
