cmake_minimum_required(VERSION 3.10.2)

if(BUILD_ALL_SAMPLES)
if (TELSDK_FEATURE_AUDIO)
    add_subdirectory( audio )
endif (TELSDK_FEATURE_AUDIO)
if (TELSDK_FEATURE_TEL)
    add_subdirectory( card_services )
    add_subdirectory( phone )
    add_subdirectory( serving_system )
    add_subdirectory( sms )
    add_subdirectory( subscription )
    add_subdirectory( rsp )
endif (TELSDK_FEATURE_TEL)
if (TELSDK_FEATURE_CONFIG)
    add_subdirectory( config )
endif (TELSDK_FEATURE_CONFIG)
if (TELSDK_FEATURE_DATA)
    add_subdirectory( data )
endif (TELSDK_FEATURE_DATA)
if (TELSDK_FEATURE_LOC)
    add_subdirectory( loc )
endif (TELSDK_FEATURE_LOC)
if (TELSDK_FEATURE_PLATFORM)
    add_subdirectory( platform )
endif (TELSDK_FEATURE_PLATFORM)
if (TELSDK_FEATURE_POWER)
    add_subdirectory( power )
endif (TELSDK_FEATURE_POWER)
if (TELSDK_FEATURE_SECURITY)
    add_subdirectory( security )
endif (TELSDK_FEATURE_SECURITY)
if (TELSDK_FEATURE_SENSOR)
    add_subdirectory( sensor )
endif (TELSDK_FEATURE_SENSOR)
if (TELSDK_FEATURE_THERM)
    add_subdirectory( thermal )
endif (TELSDK_FEATURE_THERM)
if (TELSDK_FEATURE_WIFI)
    add_subdirectory( wlan )
endif (TELSDK_FEATURE_WIFI)
if (TELSDK_FEATURE_PLATFORM_DIAG)
    add_subdirectory( diag )
endif (TELSDK_FEATURE_PLATFORM_DIAG)
endif(BUILD_ALL_SAMPLES)
if(TELSDK_FEATURE_CV2X)
    add_subdirectory( cv2x )
endif(TELSDK_FEATURE_CV2X)
if (TELSDK_FEATURE_SATCOM)
    add_subdirectory( satcom )
endif(TELSDK_FEATURE_SATCOM)
