cmake_minimum_required(VERSION 3.10.2)

add_subdirectory( telsdk_console_app )

if (TELSDK_FEATURE_SQUISH)
    add_subdirectory( squish_test_app )
endif (TELSDK_FEATURE_SQUISH)
if (TELSDK_FEATURE_SENSOR)
    add_subdirectory( sensor_test_app )
endif (TELSDK_FEATURE_SENSOR)
if (TELSDK_FEATURE_THERM)
    add_subdirectory( thermal_test_app )
    add_subdirectory( thermal_shutdown_test_app )
endif (TELSDK_FEATURE_THERM)
if (TELSDK_FEATURE_LOC)
    add_subdirectory( location_test_app )
endif (TELSDK_FEATURE_LOC)
if (TELSDK_FEATURE_CONFIG)
    add_subdirectory( modem_configurator )
    add_subdirectory( param_configurator )
endif (TELSDK_FEATURE_CONFIG)
if (TELSDK_FEATURE_DATA)
    add_subdirectory( data_qos_test_app )
    add_subdirectory( data_keep_alive_app )
endif (TELSDK_FEATURE_DATA)
if (TELSDK_FEATURE_PLATFORM)
    add_subdirectory( filesystem_test_app )
    add_subdirectory( telux_version_app )
    add_subdirectory( imei_test_app )
    add_subdirectory( antenna_test_app )
    add_subdirectory( telux_subsys_mon )
    if(TELSDK_FEATURE_PLATFORM_DIAG)
        add_subdirectory( diag_odl_app )
    endif(TELSDK_FEATURE_PLATFORM_DIAG)
endif (TELSDK_FEATURE_PLATFORM)
if (TELSDK_FEATURE_WIFI)
    add_subdirectory( wlan_test_app )
endif (TELSDK_FEATURE_WIFI)
if (TELSDK_FEATURE_CRYPTO)
    add_subdirectory( crypto_console_app )
endif (TELSDK_FEATURE_CRYPTO)
if (TELSDK_FEATURE_CRYPTO_ACCELERATOR)
    add_subdirectory( crypto_accelerator_app )
endif (TELSDK_FEATURE_CRYPTO_ACCELERATOR)
if (TELSDK_FEATURE_POWER)
    add_subdirectory( power_test_app )
endif (TELSDK_FEATURE_POWER)

if (TELSDK_FEATURE_CV2X)
    add_subdirectory( cv2x_tcp_test )
    add_subdirectory( cv2x_unicast_app)
    add_subdirectory( cv2x_config_app )
    add_subdirectory( cv2x_get_capabilities_app )
    add_subdirectory( cv2x_set_tx_power_app)
    add_subdirectory( cv2x_l2_id_filter_app)
    add_subdirectory( cv2x_tx_report_test_app)
    add_subdirectory( cv2x_slss_rx_app)
    if (TELSDK_FEATURE_PLATFORM)
        add_subdirectory( cv2x_slss_utc_app)
    endif (TELSDK_FEATURE_PLATFORM)
    add_subdirectory( cv2x_mac_clone_attack_app)
    add_subdirectory( cv2x_inject_speed)
endif (TELSDK_FEATURE_CV2X)

if (TELSDK_FEATURE_AUDIO)
    add_subdirectory( audio_console_app )
    add_subdirectory( audio_loopback_app )
endif (TELSDK_FEATURE_AUDIO)

if (TELSDK_FEATURE_CONNECTION_SECURITY)
    add_subdirectory( cellular_connection_security_app )
    add_subdirectory( wifi_connection_security_app )
endif (TELSDK_FEATURE_CONNECTION_SECURITY)

if (TELSDK_FEATURE_SATCOM)
    add_subdirectory( ntn_test_app )
endif (TELSDK_FEATURE_SATCOM)

