cmake_minimum_required(VERSION 3.10.2)

add_subdirectory(voice_call_and_volume)
add_subdirectory(playback_pcm)
add_subdirectory(playback_amrwb_plus)
add_subdirectory(capture_pcm)
add_subdirectory(transcoder_app)
add_subdirectory(generate_dtmf_tone)
add_subdirectory(generate_single_tone)
add_subdirectory(in_call_playback_amrwb_plus)
add_subdirectory(in_call_playback_pcm)
add_subdirectory(in_call_record_pcm)
add_subdirectory(in_call_proxy_mic)
add_subdirectory(bt_hfg_voice_call)
add_subdirectory(bt_hfg_inband_ringtone)
add_subdirectory(bt_hf_voice_call)
add_subdirectory(hpcm)
add_subdirectory(loopback_mic_speaker)
add_subdirectory(repeated_playback_pcm)
add_subdirectory(repeated_playback_amrwbplus)
