cmake_minimum_required(VERSION 3.10.2)

add_subdirectory( data_app )
add_subdirectory( data_call_app )
add_subdirectory( data_profile_app )
add_subdirectory( data_filter_app )
add_subdirectory( data_vlan_app )
add_subdirectory( data_dmz_app )
add_subdirectory( data_fwl_enable_app )
add_subdirectory( data_fwl_entry_app )
add_subdirectory( data_snat_app )
add_subdirectory( data_socks_app )
add_subdirectory( data_l2tp_app )
add_subdirectory( data_drb_status_app )
add_subdirectory( data_service_status_app )
add_subdirectory( data_roaming_status_app )
add_subdirectory( data_on_demand_pdn_app )
add_subdirectory( data_qos_app )